# kp

./: .editorconfig  .gitignore  .lefthookrc  .markdownlint.yaml  .private-deny-list.example  ACKNOWLEDGMENTS.md  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  lefthook.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: ambiguity-report.yml  benchmark-proposal.yml  bug-report.yml  comparison.yml  config.yml  conformance-edge-case.yml  implementation-report.yml
.github/workflows/: ci.yml
compiler/: README.md  __init__.py  embed_openai_compatible.py  graph_compiler.py
compiler/tests/: __init__.py  test_graph_compiler.py
conformance/: README.md  run.py
conformance/fixtures/: README.md
conformance/grammar/: README.md  kp-claims.peg  kp-composition.schema.json  (+2 more)
decisions/: 2026-06-22-claim-identity.md  README.md
docs/: index.html
examples/: INDEX.md  README.md
positioning/: README.md  kp-critic-faq.md  kp-intent-and-principles.md  kp-why-not-existing-standards.md
reference/: README.md  kpack  kpack_cli.py
research/: README.md  benchmark-design.md  benchmark-pilot-2026-06.md
scripts/: build_docs.py  check_external_domains.py  check_links.py  validate-commit-msg
spec/: ARCHIVE.md  AUTHORING.md  BUNDLE.md  CHANGELOG.md  COMPOSITION.md  CONSISTENCY.md  CONVENTIONS.md  CORE.md  DEFINITIONS.md  EXTENSIONS.md  INDEPENDENCE.md  LIFECYCLE.md  MAPPING.md  MULTILINGUAL.md  NOTES.md  ORGANIZATION.md  PLAYBACK.md  RATIONALE.md  README.md  RECONCILIATION.md  SPEC.md  STORAGE.md  VOICE.md
(+92 files in other folders)
